[project]
name = "aspyx-monorepo"
version = "0.0.0"
description = "Development workspace for Aspyx libraries"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
projects = [
    "packages/aspyx",
    "packages/aspyx_service",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio"
]

#    "aspyx @ packages/aspyx",
#    "aspyx_service @ packages/aspyx_service"



[tool.hatch.envs.default.scripts]
test = "pytest"
build-all = "bash scripts/build-all.sh"

[tool.hatch.envs.test.scripts]
aspyx = "pytest packages/aspyx/tests"
service = "pytest packages/aspyx_service/tests"
all = "pytest packages"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default.pip-compile]
all-extras = true

[tool.hatch.envs.default.env-vars]
PYTHONPATH = "packages/aspyx/src:packages/aspyx_service/src"
